Add favicon update some layouts

--- a/conitor.js/views/heartbeat/layout.html
+++ b/conitor.js/views/heartbeat/layout.html
@@ -12,14 +12,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand"><span class="glyphicon glyphicon-dashboard" style="color:red;"></span> Conitor</a>
+            <a href="/" class="navbar-brand"><span class="glyphicon glyphicon-stats" style="color:red;"></span> Conitor</a>
         </div>
         <nav class="collapse navbar-collapse" id="wiesler-nav">
             <ul class="nav navbar-nav">
                 <li  class = "active" >
-                    <a href="/news"><span class="glyphicon glyphicon-list"></span> 新闻</a>
+                    <a href="/heartbeat"><span class="glyphicon glyphicon-dashboard"></span> 仪表盘</a>
                 </li>
-                <li >
+                <!-- <li >
                     <a href="/newslist"><span class="glyphicon glyphicon-align-justify"></span> 新闻列表</a>
                 </li>
                 <li >
@@ -30,7 +30,7 @@
                 </li>
                 <li >
                     <a href="/corpus"><span class="glyphicon glyphicon-cloud"></span> 语料</a>
-                </li>
+                </li> -->
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
