--- a/conitor.js/views/index.html
+++ b/conitor.js/views/index.html
@@ -1,8 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-    </head>
-    <body>
-    </body>
-</html>
+{% extends 'layout.html'%}
+
+{% block nav %}
+<nav class="navbar navbar-default" id="nav" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#wiesler-nav">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="/" class="navbar-brand"><span class="glyphicon glyphicon-stats" style="color:red;"></span> Conitor</a>
+        </div>
+        <nav class="collapse navbar-collapse" id="wiesler-nav">
+            <ul class="nav navbar-nav">
+                <li >
+                    <a href="/heartbeat"><span class="glyphicon glyphicon-dashboard"></span> 仪表盘</a>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <span class="glyphicon glyphicon-user"></span> {{ username|default('None') }}已登录 <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="#"><span class="glyphicon glyphicon-cog"></span> 设置</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-log-out"></span> 退出</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</nav>
+{% endblock nav%}
+
+{% block content %}
+<div class="jumbotron">
+  <h1>Welcome to Conitor</h1>
+  <p>Conitor is a monitoring tool.</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+</div>
+{% endblock content%}
